--- a/.env
+++ b/.env
@@ -3,3 +3,6 @@ MONGO_URL=mongodb+srv://rahuldhimanrd14:Drn3gFbHEO2M5YBd@cluster0.7tf9kye.mongod
 
 GOOGLE_ID=1067923761260-di6sgcmuuqa3g47sfv0g2sglsop9a1ud.apps.googleusercontent.com
 GOOGLE_SECRET=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
+
+NEXTAUTH_SECRET=befkbwkfbwekhfibewebfef
+NEXTAUTH_URL=http://localhost:3000
