--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bcryptjs": "^2.4.3",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
+    "firebase": "^10.3.1",
     "mongodb": "^5.8.1",
     "mongoose": "6.11.1",
     "next": "13.4.19",
@@ -21,6 +22,7 @@
     "postcss": "8.4.28",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "swr": "^2.2.2",
     "tailwindcss": "3.3.3"
   }
 }
