--- a/.env
+++ b/.env
@@ -6,3 +6,5 @@ GOOGLE_SECRET=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
 
 NEXTAUTH_SECRET=befkbwkfbwekhfibewebfef
 NEXTAUTH_URL=http://localhost:3000
+
+BASE_URL=http://localhost:3000/
