--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "react-dom": "18.2.0",
     "swr": "^2.2.2",
     "tailwindcss": "3.3.3"
+  },
+  "devDependencies": {
+    "encoding": "^0.1.13"
   }
 }
