--- a/.env
+++ b/.env
@@ -5,6 +5,6 @@ GOOGLE_ID=1067923761260-di6sgcmuuqa3g47sfv0g2sglsop9a1ud.apps.googleusercontent.
 GOOGLE_SECRET=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
 
 NEXTAUTH_SECRET=befkbwkfbwekhfibewebfef
-NEXTAUTH_URL=https://blog-website-lovat-six.vercel.app
+NEXTAUTH_URL=http://localhost:3000
 
-BASE_URL=https://blog-website-lovat-six.vercel.app
+BASE_URL=http://localhost:3000
