--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/font": "^13.4.19",
     "autoprefixer": "10.4.15",
     "axios": "^1.5.0",
     "bcryptjs": "^2.4.3",
