--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.18",
     "@next/font": "^13.4.19",
     "autoprefixer": "10.4.15",
     "axios": "^1.5.0",
